many changes, as now shown in the readme.  Mostly related to new "upstream mode" for profiling whole basins

--- a/tests/DataTests.ipynb
+++ b/tests/DataTests.ipynb
@@ -3,7 +3,7 @@
   {
    "cell_type": "code",
    "execution_count": 12,
-   "id": "3bd0cdfb",
+   "id": "c9abd12c",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -13,7 +13,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "ff926a54",
+   "id": "a388ecb2",
    "metadata": {},
    "source": [
     "## These are simple tests to see if the acc grid seems accurate, and the chi-elevation profile is doing what we think it should.  Grids should be tested for each continent"
@@ -22,7 +22,7 @@
   {
    "cell_type": "code",
    "execution_count": 178,
-   "id": "9aa92417",
+   "id": "f1b2e3d7",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -31,7 +31,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "69e01674",
+   "id": "75791e97",
    "metadata": {},
    "source": [
     "## North america"
@@ -40,7 +40,7 @@
   {
    "cell_type": "code",
    "execution_count": 172,
-   "id": "9e19409c",
+   "id": "a9894543",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -50,7 +50,7 @@
   {
    "cell_type": "code",
    "execution_count": 3,
-   "id": "aee6da87",
+   "id": "0a5782f5",
    "metadata": {},
    "outputs": [
     {
@@ -71,7 +71,7 @@
   {
    "cell_type": "code",
    "execution_count": 185,
-   "id": "ee65b73c",
+   "id": "6c45a327",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -86,7 +86,7 @@
   {
    "cell_type": "code",
    "execution_count": 186,
-   "id": "ff75ad1f",
+   "id": "8a4827f8",
    "metadata": {},
    "outputs": [
     {
@@ -107,7 +107,7 @@
   {
    "cell_type": "code",
    "execution_count": 187,
-   "id": "921c942c",
+   "id": "182d0049",
    "metadata": {},
    "outputs": [
     {
@@ -140,7 +140,7 @@
   {
    "cell_type": "code",
    "execution_count": 190,
-   "id": "826f7b6f",
+   "id": "4f2c0897",
    "metadata": {},
    "outputs": [
     {
@@ -173,7 +173,7 @@
   {
    "cell_type": "code",
    "execution_count": 191,
-   "id": "96d166ab",
+   "id": "bd1a0a37",
    "metadata": {},
    "outputs": [
     {
@@ -206,7 +206,7 @@
   {
    "cell_type": "code",
    "execution_count": 192,
-   "id": "9275a0dd",
+   "id": "16cb0f7a",
    "metadata": {},
    "outputs": [
     {
@@ -238,7 +238,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "74576d99",
+   "id": "09b71cf4",
    "metadata": {},
    "source": [
     "## South America (amazon)"
@@ -247,7 +247,7 @@
   {
    "cell_type": "code",
    "execution_count": 2,
-   "id": "5ce39be8",
+   "id": "9845effb",
    "metadata": {},
    "outputs": [
     {
@@ -270,7 +270,7 @@
   {
    "cell_type": "code",
    "execution_count": 193,
-   "id": "004d2d8c",
+   "id": "49005923",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -283,7 +283,7 @@
   {
    "cell_type": "code",
    "execution_count": 194,
-   "id": "6be15495",
+   "id": "09866075",
    "metadata": {},
    "outputs": [
     {
@@ -303,7 +303,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "fe874e89",
+   "id": "f992a990",
    "metadata": {},
    "source": [
     "## Asia (ganges)"
@@ -312,7 +312,7 @@
   {
    "cell_type": "code",
    "execution_count": 203,
-   "id": "83c371f1",
+   "id": "c958c18a",
    "metadata": {},
    "outputs": [
     {
@@ -333,7 +333,7 @@
   {
    "cell_type": "code",
    "execution_count": 212,
-   "id": "2068276a",
+   "id": "d428fca4",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -346,7 +346,7 @@
   {
    "cell_type": "code",
    "execution_count": 213,
-   "id": "783437e0",
+   "id": "fdf00009",
    "metadata": {},
    "outputs": [
     {
@@ -366,7 +366,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "b7a2bb53",
+   "id": "8689c7a2",
    "metadata": {},
    "source": [
     "## Africa (Nile)"
@@ -375,7 +375,7 @@
   {
    "cell_type": "code",
    "execution_count": 230,
-   "id": "9f9793c9",
+   "id": "f6af969b",
    "metadata": {},
    "outputs": [
     {
@@ -396,7 +396,7 @@
   {
    "cell_type": "code",
    "execution_count": 232,
-   "id": "3b32f2e6",
+   "id": "5dc4dbbb",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -409,7 +409,7 @@
   {
    "cell_type": "code",
    "execution_count": 237,
-   "id": "4fedf8d7",
+   "id": "bfb1681f",
    "metadata": {},
    "outputs": [
     {
@@ -430,7 +430,7 @@
   {
    "cell_type": "code",
    "execution_count": 238,
-   "id": "a4bc8785",
+   "id": "e613d6b9",
    "metadata": {},
    "outputs": [
     {
@@ -450,7 +450,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "640e2243",
+   "id": "3063b3da",
    "metadata": {
     "tags": []
    },
@@ -461,7 +461,7 @@
   {
    "cell_type": "code",
    "execution_count": 217,
-   "id": "721bb388",
+   "id": "7517f9e4",
    "metadata": {},
    "outputs": [
     {
@@ -482,7 +482,7 @@
   {
    "cell_type": "code",
    "execution_count": 220,
-   "id": "afca6886",
+   "id": "be5239e0",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -495,7 +495,7 @@
   {
    "cell_type": "code",
    "execution_count": 222,
-   "id": "2276141a",
+   "id": "e57d1ba1",
    "metadata": {},
    "outputs": [
     {
@@ -514,9 +514,43 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "3740d58c",
+   "metadata": {},
+   "source": [
+    "# Basin Stats"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "8195cbd5",
+   "metadata": {},
+   "source": [
+    "Probably easiest just to click:\n",
+    "\n",
+    "http://35.158.238.205:13211/get_profiles?athres=1.0&code=7515827&dem2=null&basin_extract=1&zoom=7&theta=0.45&longitude=8.201&latitude=47.939&d8=0&stamen=1\n",
+    "\n",
+    "Compare stats at bottom of page to Portenga and Bierman dataset, Wutach River: Mean basin slope: 11.6, Basin Area: 19.75, Effective basin elevation (not sure what this means compared too average elev):996"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "4c0d35e6",
+   "metadata": {},
+   "source": [
+    "Upper beni\n",
+    "\n",
+    "http://35.158.238.205:13211/get_profiles?athres=1.0&code=7515827&dem2=null&basin_extract=1&zoom=7&theta=0.45&longitude=-67.909&latitude=-16.314&d8=0&stamen=1\n",
+    "\n",
+    "Area (p&b): 62.76\n",
+    "Slope: 27 degrees\n",
+    "elev: 4317"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
-   "id": "b77ce0cf",
+   "id": "fb268901",
    "metadata": {},
    "outputs": [],
    "source": []
@@ -538,7 +572,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.8.2"
+   "version": "3.9.7"
   }
  },
  "nbformat": 4,
